tests/ui/bare-trait-object.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/bare-trait-object.rs:11:16
   |
11 | impl Trait for Send + Sync {
   |                ^^^^^^^^^^^ help: use `dyn`: `dyn Send + Sync`
   |
note: the lint level is defined here
  --> $DIR/bare-trait-object.rs:1:9
   |
1  | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2021 edition!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>
